--- a/shop.html
+++ b/shop.html
@@ -304,51 +304,7 @@
 </div>
 </div>
 </div>
-<script>
-function addToCart(item, price, inputId) {
-    const depositValue = document.getElementById(inputId).value;
-    const deposit = Number(depositValue);
-    if (!deposit || isNaN(deposit) || deposit <= 0) {
-        alert("Please enter a valid deposit amount.");
-        return;
-    }
 
-    // Load cart or initialize empty array
-    let cart = JSON.parse(localStorage.getItem("cart")) || [];
-
-    // Check if item already in cart (by name)
-    const index = cart.findIndex(prod => prod.name === item);
-    if (index !== -1) {
-        // Increment quantity and update deposit to latest entered value
-        cart[index].quantity = (cart[index].quantity || 1) + 1;
-        cart[index].deposit = deposit;
-    } else {
-        // Add new product
-        cart.push({
-            name: item,
-            price: price,
-            deposit: deposit,
-            quantity: 1
-        });
-    }
-
-    localStorage.setItem("cart", JSON.stringify(cart));
-    showToast(item + " added to cart!");
-    updateCartCount();
-}
-
-function showToast(message) {
-  const toast = document.getElementById("toast");
-  toast.textContent = message;
-  toast.style.display = "block";
-  toast.style.opacity = "1";
-  setTimeout(() => {
-    toast.style.opacity = "0";
-    setTimeout(() => toast.style.display = "none", 300);
-  }, 2500);
-}
-
-</script>
 <footer>
 <div class="footer-contacts">
 <a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a>
@@ -404,5 +360,102 @@ document.addEventListener('DOMContentLoaded', function() {
     }
   });
 </script>
+
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+  function addToCart(item, price, inputId) {
+      const depositValue = document.getElementById(inputId).value;
+      const deposit = Number(depositValue);
+      if (!deposit || isNaN(deposit) || deposit <= 0) {
+          alert("Please enter a valid deposit amount.");
+          return;
+      }
+
+      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+      const index = cart.findIndex(prod => prod.name === item);
+      if (index !== -1) {
+          cart[index].quantity = (cart[index].quantity || 1) + 1;
+          cart[index].deposit = deposit;
+      } else {
+          cart.push({
+              name: item,
+              price: price,
+              deposit: deposit,
+              quantity: 1
+          });
+      }
+
+      localStorage.setItem("cart", JSON.stringify(cart));
+      showToast(item + " added to cart!");
+      updateCartCount();
+  }
+
+  function showToast(message) {
+    const toast = document.getElementById("toast");
+    toast.textContent = message;
+    toast.style.display = "block";
+    toast.style.opacity = "1";
+    setTimeout(() => {
+      toast.style.opacity = "0";
+      setTimeout(() => toast.style.display = "none", 300);
+    }, 2500);
+  }
+
+  window.addToCart = addToCart; // expose globally
+});
+</script>
+
+
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+  function addToCart(item, price, inputId) {
+    const depositValue = document.getElementById(inputId).value;
+    const deposit = Number(depositValue);
+    if (!deposit || isNaN(deposit) || deposit <= 0) {
+      alert("Please enter a valid deposit amount.");
+      return;
+    }
+
+    let cart = JSON.parse(localStorage.getItem("cart")) || [];
+    const index = cart.findIndex(prod => prod.name === item);
+    if (index !== -1) {
+      cart[index].quantity = (cart[index].quantity || 1) + 1;
+      cart[index].deposit = deposit;
+    } else {
+      cart.push({
+        name: item,
+        price: price,
+        deposit: deposit,
+        quantity: 1
+      });
+    }
+
+    localStorage.setItem("cart", JSON.stringify(cart));
+    showToast(item + " added to cart!");
+    updateCartCount();
+  }
+
+  function showToast(message) {
+    const toast = document.getElementById("toast");
+    toast.textContent = message;
+    toast.style.display = "block";
+    toast.style.opacity = "1";
+    setTimeout(() => {
+      toast.style.opacity = "0";
+      setTimeout(() => toast.style.display = "none", 300);
+    }, 2500);
+  }
+
+  function updateCartCount() {
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
+    const badge = document.getElementById("cartCount");
+    if (badge) badge.textContent = cart.length;
+  }
+
+  window.addToCart = addToCart;
+  updateCartCount();
+});
+</script>
+
 </body>
 </html>
