--- a/cart.html
+++ b/cart.html
@@ -270,6 +270,7 @@
 
 
 
+
 <script>
 document.addEventListener("DOMContentLoaded", function () {
   const cartTable = document.querySelector("#cartTable tbody");
@@ -278,30 +279,31 @@ document.addEventListener("DOMContentLoaded", function () {
 
   function loadCart() {
     const cart = JSON.parse(localStorage.getItem("cart")) || [];
-    console.log("Cart data:", cart); // Debugging
-
-    let totalDeposit = 0;
     cartTable.innerHTML = "";
-    cart.forEach(item => {
-      const quantity = item.quantity || 1;
-      const deposit = item.deposit || Math.round(item.price * 0.5);
-      const row = document.createElement("tr");
-      const totalPrice = item.price * quantity;
-      const totalItemDeposit = deposit * quantity;
+    let totalDeposit = 0;
 
+    cart.forEach(item => {
+      // force quantity of 1 for every financed kit
+      const qty = 1;
+      const deposit = item.deposit;
+      const totalPrice = item.price * qty;
+      const totalItemDeposit = deposit * qty;
+      totalDeposit += totalItemDeposit;
+
+      const row = document.createElement("tr");
       row.innerHTML = `
         <td class="product-col">${item.name}</td>
         <td class="col-unit">${item.price.toLocaleString()}</td>
         <td>${deposit.toLocaleString()}</td>
-        <td>${quantity}</td>
+        <td>${qty}</td>
         <td>${totalPrice.toLocaleString()}</td>
         <td class="col-total-deposit">${totalItemDeposit.toLocaleString()}</td>
       `;
-      totalDeposit += totalItemDeposit;
       cartTable.appendChild(row);
     });
 
-    totalDisplay.innerText = "Total Deposit: KES " + totalDeposit.toLocaleString();
+    totalDisplay.innerText =
+      "Total Deposit: KES " + totalDeposit.toLocaleString();
     clearCartBtn.style.display = cart.length > 0 ? "inline-block" : "none";
   }
 
@@ -310,42 +312,23 @@ document.addEventListener("DOMContentLoaded", function () {
     loadCart();
   }
 
-  function updateCartCount() {
-    const cart = JSON.parse(localStorage.getItem("cart")) || [];
-    const count = cart.length;
-    const badge = document.getElementById("cartCount");
-    if (badge) badge.textContent = count;
-  }
-
   clearCartBtn.addEventListener("click", clearCart);
   loadCart();
-  updateCartCount();
 
-  // Mobile nav handling
-  document.body.addEventListener("click", function (e) {
-    const header = document.querySelector("header");
-    if (!header) return;
-    const nav = header.querySelector("nav");
-    const navToggle = header.querySelector(".nav-toggle");
-    if (
-      header.classList.contains("nav-open") &&
-      !nav.contains(e.target) &&
-      !navToggle.contains(e.target)
-    ) {
-      header.classList.remove("nav-open");
-    }
-  }, true);
-
-  // Show cart badge if on cart, shop, checkout, etc.
+  // Show cart badge on eligible pages
   const page = window.location.pathname.toLowerCase();
-  if (page.includes("shop") || page.includes("cart") || page.includes("checkout") || page.includes("financing")) {
+  if (
+    page.includes("shop") ||
+    page.includes("cart") ||
+    page.includes("checkout") ||
+    page.includes("financing")
+  ) {
     const wrapper = document.getElementById("cartLinkWrapper");
-    if (wrapper) {
-      wrapper.style.display = "inline-block";
-    }
+    if (wrapper) wrapper.style.display = "inline-block";
   }
 });
 </script>
+
 
 </body>
 </html>
